Fix first k columns for tables for better view on Mobile Devices

--- a/custom.css
+++ b/custom.css
@@ -387,3 +387,17 @@ table .odd {
     font-size: 16px;
   }
 }
+
+.table-responsive>.fixed-column {
+    position: absolute;
+    display: inline-block;
+    width: auto;
+    border-right: 1px solid #ddd;
+    background-color: #fff;
+}
+
+@media(min-width:768px) {
+    .table-responsive>.fixed-column {
+        display: none;
+    }
+}
